--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -7,7 +7,7 @@
   ],
   "responseOverrides": {
           "401": {
-            "redirect": "/.auth/login/aad",
+            "redirect": "/.auth/login/add/callback",
             "statusCode": 302
           }
         },
